--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="container">
-        <div class="item-1 item">1</div>
-        <div class="item-2 item">2</div>
+        <div class="item-1 item"><a href="flexbox.html"> Flexbox Practice Page </a></div>
+        <div class="item-2 item"><a href="flexgrid.html"> Flexgrid Practice Page </a></div>
         <div class="item-3 item">3</div>
         <div class="item-4 item">4</div>
         <div class="item-5 item">5</div>
